# hpc

.2024_2025/env/hdf5/: CMakeLists.txt  load_var.py
.2024_2025/mpi/tp/02-halo_1d/: CMakeLists.txt  enonce.md
.2024_2025/mpi/tp/02-ping_pong/: CMakeLists.txt  ping_pong_2.f90  ping_pong_3.f90
.2024_2025/projet/lib_pour_le_projet/: 2decomp-fft-2.0.1.tar
2024_2025/env/hdf5/: export_hdf5.f90
2024_2025/mpi/tp/02-halo_1d/: fd_p2p.f90
2024_2025/mpi/tp/02-ping_pong/: ping_pong.md  ping_pong_1.f90
2024_2025/projet/derivatives/: CMakeLists.txt
env/: notes.md
mpi/tp/02-halo_1d/: fd_p2p.f90
mpi/tp/02-ping_pong/: ._ping_pong_3.f90
projet/: projet.md
projet/derivatives/: eval_derivative.md  eval_derivatives.f90
week-01/: readme.md
week-01/lecture-01/: how_to_use_azzurra.md
week-02/lecture-01/: anim1d.py  anim2d.py  anim2d_bords.py
week-02/lecture-01/fortran-2d/: plot.py  tube_2d_ondes.F90
week-02/lecture-01/tiling-1/: CMakeLists.txt  matmul_roofline.cpp  matmul_tiled.cpp  roofline.sh
week-02/lecture-01/waves_1D/: complexite.py  waves_1d.c  waves_1d.cpp  waves_1d.f90  waves_1d.py
week-03_05/: readme.md
week-03_05/tp/: env.sh
week-03_05/tp/tp/: Readme.md
week-03_05/tp/tp/arch/: make_gnu  make_intel  make_ipcours  make_oneapi  make_zay
week-03_05/tp/tp/tp1/: Makefile
week-03_05/tp/tp/tp1/solution/: Makefile  even_odd.f90  even_odd.slurm  even_odd_mpi2.f90
week-03_05/tp/tp/tp2/: Makefile  ping_pong_1.f90  ping_pong_2.f90  ping_pong_3.f90
week-03_05/tp/tp/tp2/solution/: Makefile  ping_pong_1.f90  ping_pong_2.f90  (+5 more)
week-03_05/tp/tp/tp3/: Makefile  pi.f90
week-03_05/tp/tp/tp4/: Makefile  transpose.f90
week-03_05/tp/tp/tp5/: Makefile  matrix_products.f90
week-03_05/tp/tp/tp6/: Makefile  commsplit.f90
week-03_05/tp/tp/tp7/: Makefile  read_file.f90  read_file.slurm
week-03_05/tp/tp/tp8/: Makefile  compute_poisson.f90  exact_solution.f90  parallel.f90  poisson.f90  read.f90  type_params.f90
week-03_05/tp/tp_C/arch/: make_gnu  make_inc  make_ipcours  make_oneapi  make_zay
week-03_05/tp/tp_C/tp1/: Makefile
week-03_05/tp/tp_C/tp2/: Makefile  ping_pong_1.c  ping_pong_1.slurm  ping_pong_2.c  ping_pong_3.c
week-03_05/tp/tp_C/tp3/: Makefile  pi.slurm
week-03_05/tp/tp_C/tp4/: Makefile  transpose.c  transpose.slurm
week-03_05/tp/tp_C/tp5/: Makefile  matrix_products.c
week-03_05/tp/tp_C/tp6/: Makefile  commsplit.c
week-03_05/tp/tp_C/tp7/: Makefile  read_file.c
week-03_05/tp/tp_C/tp8/: Makefile  parallel.c
week-03_05/tp/tp_py/: Readme.md
week-03_05/tp/tp_py/arch/: make_intel  make_zay
week-03_05/tp/tp_py/tp1/: Makefile
week-03_05/tp/tp_py/tp2/: Makefile  ping_pong_1.py  ping_pong_1.slurm  ping_pong_2.py  ping_pong_2.slurm  ping_pong_3.py
week-03_05/tp/tp_py/tp3/: Makefile  pi.py  pi.slurm
week-03_05/tp/tp_py/tp4/: Makefile  transpose.py
week-03_05/tp/tp_py/tp5/: Makefile  matrix_products.py  matrix_products.slurm
week-03_05/tp/tp_py/tp6/: Makefile  commsplit.py  commsplit.slurm
week-03_05/tp/tp_py/tp7/: Makefile  read_file.py  read_file.slurm
week-03_05/tp/tp_py/tp8/: Makefile  domain.py  parallel.py  poisson.slurm
(+86 files in other folders)
